Split read scalars and arrays into separate benchmarks

--- a/configs/eclipse-milo.conf
+++ b/configs/eclipse-milo.conf
@@ -1,50 +1,50 @@
-
 stack-bench {
-  name = "eclipse milo opc-ua sdk"
-  endpoint-url = "opc.tcp://localhost:12686/milo"
+  name = "eclipse milo opc ua demo server"
+  endpoint-url = "opc.tcp://localhost:62541/milo"
+  security-policy = "None"
 
   read-benchmark {
-    request-count = 100000
+    request-count = 200000
 
     concurrency-levels = [1, 4, 16, 64, 128]
 
-    scalar-boolean = "ns=2;s=HelloWorld/ScalarTypes/Boolean"
-    scalar-sbyte = "ns=2;s=HelloWorld/ScalarTypes/SByte"
-    scalar-int16 = "ns=2;s=HelloWorld/ScalarTypes/Int16"
-    scalar-int32 = "ns=2;s=HelloWorld/ScalarTypes/Int32"
-    scalar-int64 = "ns=2;s=HelloWorld/ScalarTypes/Int64"
-    scalar-byte = "ns=2;s=HelloWorld/ScalarTypes/Byte"
-    scalar-uint16 = "ns=2;s=HelloWorld/ScalarTypes/UInt16"
-    scalar-uint32 = "ns=2;s=HelloWorld/ScalarTypes/UInt32"
-    scalar-uint64 = "ns=2;s=HelloWorld/ScalarTypes/UInt64"
-    scalar-float = "ns=2;s=HelloWorld/ScalarTypes/Float"
-    scalar-double = "ns=2;s=HelloWorld/ScalarTypes/Double"
-    scalar-string = "ns=2;s=HelloWorld/ScalarTypes/String"
-    scalar-datetime = "ns=2;s=HelloWorld/ScalarTypes/DateTime"
-    scalar-guid = "ns=2;s=HelloWorld/ScalarTypes/Guid"
-    scalar-bytestring = "ns=2;s=HelloWorld/ScalarTypes/ByteString"
-    scalar-xmlelement = "ns=2;s=HelloWorld/ScalarTypes/XmlElement"
-    scalar-localizedtext = "ns=2;s=HelloWorld/ScalarTypes/LocalizedText"
-    scalar-qualifiedname = "ns=2;s=HelloWorld/ScalarTypes/QualifiedName"
+    scalar-boolean = "ns=2;s=CTT/Static/All Profiles/Scalar/Boolean"
+    scalar-sbyte = "ns=2;s=CTT/Static/All Profiles/Scalar/SByte"
+    scalar-int16 = "ns=2;s=CTT/Static/All Profiles/Scalar/Int16"
+    scalar-int32 = "ns=2;s=CTT/Static/All Profiles/Scalar/Int32"
+    scalar-int64 = "ns=2;s=CTT/Static/All Profiles/Scalar/Int64"
+    scalar-byte = "ns=2;s=CTT/Static/All Profiles/Scalar/Byte"
+    scalar-uint16 = "ns=2;s=CTT/Static/All Profiles/Scalar/UInt16"
+    scalar-uint32 = "ns=2;s=CTT/Static/All Profiles/Scalar/UInt32"
+    scalar-uint64 = "ns=2;s=CTT/Static/All Profiles/Scalar/UInt64"
+    scalar-float = "ns=2;s=CTT/Static/All Profiles/Scalar/Float"
+    scalar-double = "ns=2;s=CTT/Static/All Profiles/Scalar/Double"
+    scalar-string = "ns=2;s=CTT/Static/All Profiles/Scalar/String"
+    scalar-datetime = "ns=2;s=CTT/Static/All Profiles/Scalar/DateTime"
+    scalar-guid = "ns=2;s=CTT/Static/All Profiles/Scalar/Guid"
+    scalar-bytestring = "ns=2;s=CTT/Static/All Profiles/Scalar/ByteString"
+    scalar-xmlelement = "ns=2;s=CTT/Static/All Profiles/Scalar/XmlElement"
+    scalar-localizedtext = "ns=2;s=CTT/Static/All Profiles/Scalar/LocalizedText"
+    scalar-qualifiedname = "ns=2;s=CTT/Static/All Profiles/Scalar/QualifiedName"
 
-    array-boolean = "ns=2;s=HelloWorld/ArrayTypes/BooleanArray"
-    array-sbyte = "ns=2;s=HelloWorld/ArrayTypes/SByteArray"
-    array-int16 = "ns=2;s=HelloWorld/ArrayTypes/Int16Array"
-    array-int32 = "ns=2;s=HelloWorld/ArrayTypes/Int32Array"
-    array-int64 = "ns=2;s=HelloWorld/ArrayTypes/Int64Array"
-    array-byte = "ns=2;s=HelloWorld/ArrayTypes/ByteArray"
-    array-uint16 = "ns=2;s=HelloWorld/ArrayTypes/UInt16Array"
-    array-uint32 = "ns=2;s=HelloWorld/ArrayTypes/UInt32Array"
-    array-uint64 = "ns=2;s=HelloWorld/ArrayTypes/UInt64Array"
-    array-float = "ns=2;s=HelloWorld/ArrayTypes/FloatArray"
-    array-double = "ns=2;s=HelloWorld/ArrayTypes/DoubleArray"
-    array-string = "ns=2;s=HelloWorld/ArrayTypes/StringArray"
-    array-datetime = "ns=2;s=HelloWorld/ArrayTypes/DateTimeArray"
-    array-guid = "ns=2;s=HelloWorld/ArrayTypes/GuidArray"
-    array-bytestring = "ns=2;s=HelloWorld/ArrayTypes/ByteStringArray"
-    array-xmlelement = "ns=2;s=HelloWorld/ArrayTypes/XmlElementArray"
-    array-localizedtext = "ns=2;s=HelloWorld/ArrayTypes/LocalizedTextArray"
-    array-qualifiedname = "ns=2;s=HelloWorld/ArrayTypes/QualifiedNameArray"
+    array-boolean = "ns=2;s=CTT/Static/All Profiles/Array/BooleanArray"
+    array-sbyte = "ns=2;s=CTT/Static/All Profiles/Array/SByteArray"
+    array-int16 = "ns=2;s=CTT/Static/All Profiles/Array/Int16Array"
+    array-int32 = "ns=2;s=CTT/Static/All Profiles/Array/Int32Array"
+    array-int64 = "ns=2;s=CTT/Static/All Profiles/Array/Int64Array"
+    array-byte = "ns=2;s=CTT/Static/All Profiles/Array/ByteArray"
+    array-uint16 = "ns=2;s=CTT/Static/All Profiles/Array/UInt16Array"
+    array-uint32 = "ns=2;s=CTT/Static/All Profiles/Array/UInt32Array"
+    array-uint64 = "ns=2;s=CTT/Static/All Profiles/Array/UInt64Array"
+    array-float = "ns=2;s=CTT/Static/All Profiles/Array/FloatArray"
+    array-double = "ns=2;s=CTT/Static/All Profiles/Array/DoubleArray"
+    array-string = "ns=2;s=CTT/Static/All Profiles/Array/StringArray"
+    array-datetime = "ns=2;s=CTT/Static/All Profiles/Array/DateTimeArray"
+    array-guid = "ns=2;s=CTT/Static/All Profiles/Array/GuidArray"
+    array-bytestring = "ns=2;s=CTT/Static/All Profiles/Array/ByteStringArray"
+    array-xmlelement = "ns=2;s=CTT/Static/All Profiles/Array/XmlElementArray"
+    array-localizedtext = "ns=2;s=CTT/Static/All Profiles/Array/LocalizedTextArray"
+    array-qualifiedname = "ns=2;s=CTT/Static/All Profiles/Array/QualifiedNameArray"
   }
 }
 
