--- a/configs/node-opcua.conf
+++ b/configs/node-opcua.conf
@@ -1,7 +1,7 @@
-
 stack-bench {
   name = "node-opcua"
   endpoint-url = "opc.tcp://localhost:26543"
+  security-policy = "None"
 
   read-benchmark {
     request-count = 100000
