--- a/configs/prosys.conf
+++ b/configs/prosys.conf
@@ -1,10 +1,10 @@
-
 stack-bench {
   name = "prosys simulation server"
   endpoint-url = "opc.tcp://localhost:53530/OPCUA/SimulationServer"
+  security-policy = "None"
 
   read-benchmark {
-    request-count = 100000
+    request-count = 200000
 
     concurrency-levels = [1, 4, 16, 64, 128]
 
