--- a/configs/ua-cpp.conf
+++ b/configs/ua-cpp.conf
@@ -1,10 +1,9 @@
 stack-bench {
   name = "ua-cpp-server"
-
   endpoint-url = "opc.tcp://localhost:48010"
+  security-policy = "None"
 
   read-benchmark {
-
     request-count = 100000
 
     concurrency-levels = [1, 4, 16, 64, 128]
